Refactor DailyChallengeTest class